Add transcripts logic

--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -2,10 +2,230 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from youtube_transcript_api import YouTubeTranscriptApi, TranscriptsDisabled, VideoUnavailable\n",
+    "from youtube_transcript_api.formatters import TextFormatter, JSONFormatter\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def get_youtube_transcript(video_id, lang_code='en', format='json'):\n",
+    "  # Validate input types\n",
+    "  if not isinstance(video_id, str):\n",
+    "    raise ValueError(\"The video_id must be a string.\")\n",
+    "  if not isinstance(lang_code, str):\n",
+    "    raise ValueError(\"The lang_code must be a string.\")\n",
+    "  if not isinstance(format, str) or format not in ['text', 'json']:\n",
+    "    raise ValueError(\"The format must be either 'text' or 'json'.\")\n",
+    "\n",
+    "  try:\n",
+    "    # Attempt to retrieve the transcript\n",
+    "    transcript = YouTubeTranscriptApi.get_transcript(video_id, languages=[lang_code])\n",
+    "\n",
+    "    # Initialize the appropriate formatter\n",
+    "    if format == 'text':\n",
+    "      formatter = TextFormatter()\n",
+    "      return formatter.format_transcript(transcript)\n",
+    "    else:\n",
+    "      formatter = JSONFormatter()\n",
+    "      return formatter.format_transcript(transcript)\n",
+    "\n",
+    "  except VideoUnavailable:\n",
+    "    raise ValueError(f\"The video with ID '{video_id}' is unavailable.\")\n",
+    "  except TranscriptsDisabled:\n",
+    "    raise ValueError(f\"Transcripts are disabled for the video with ID '{video_id}'.\")\n",
+    "  except Exception as e:\n",
+    "    raise ValueError(f\"An error occurred while fetching the transcript: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "he's known as the Oracle of Omaha famed investor \n",
+      "Warren Buffett is talking with Norah O'Donnell  \n",
+      "about a new documentary based on a somewhat \n",
+      "unlikely friendship if there's any story that  \n",
+      "should be told it should be her story if I was a \n",
+      "young girl I'd want to hear that story it would  \n",
+      "change my self-image Warren Buffett rarely gives \n",
+      "interviews but also rare his friendship with the  \n",
+      "late trailblazing publisher of the Washington Post \n",
+      "why did you want to talk about Katharine Graham  \n",
+      "well she was one of a kind and she was terrified \n",
+      "of the job she knew she could do things but she'd  \n",
+      "been told all her life that she wasn't and the \n",
+      "females didn't do things I mean her mother told  \n",
+      "her nobody's interested in listening to you and \n",
+      "so all of a sudden here she is and she had an all  \n",
+      "male board that was waiting for her and all they \n",
+      "wanted was her to stay home and cash the dividend  \n",
+      "checks Graham was thrust into the role taking over \n",
+      "the company after her husband Philip Graham died  \n",
+      "by Suicide she was then at the center of some of \n",
+      "the Century's biggest Stories the much discussed  \n",
+      "and apparently widely read but still classified \n",
+      "Pentagon documents were turned over to Congress  \n",
+      "today she made the decision to publish the \n",
+      "Pentagon papers that helped lead to the end of the  \n",
+      "Vietnam War five men with bugging gear were found \n",
+      "in Democratic headquarters here in the Watergate  \n",
+      "building it was Katharine Graham who supported \n",
+      "the investigative journalism that led to President  \n",
+      "Nixon's resignation after Watergate I shall resign \n",
+      "the presidency effective at noon tomorrow it  \n",
+      "was such an extraordinary time oh everything \n",
+      "everything and she had been drummed into her  \n",
+      "head only men can succeed at business the worst \n",
+      "handicap women work under is the self-inflicted  \n",
+      "one that if you've grown up thinking of yourself \n",
+      "as a second class citizen that you tend always  \n",
+      "to put yourself down Graham's Journey from \n",
+      "housewife to the first female CEO of a Fortune  \n",
+      "500 company is laid out in a new documentary \n",
+      "Becoming Katharine Graham now streaming on  \n",
+      "Amazon Prime I said Mrs Graham you control this \n",
+      "company Lock Stock and Barrel but you're still  \n",
+      "worried about me at this center of the story is \n",
+      "an unlikely friendship that began on June 4th 1973  \n",
+      "ah this is the letter that's the famous letter \n",
+      "the famous letter when Buffett sent Graham a  \n",
+      "letter after buying a significant amount of the \n",
+      "Washington Post Company's stock I said I'll never  \n",
+      "buy another share unless you personally uh okay it \n",
+      "and I signed a document we became friends he used  \n",
+      "to come to board meetings with about 20 annual \n",
+      "reports and he would take me through these annual  \n",
+      "reports I mean it was like going to business \n",
+      "school with Warren Buffett why did you invest  \n",
+      "in the Washington Post in the first place well it \n",
+      "was ridiculously cheap you saw a bargain it was a  \n",
+      "super bargain it was worth at least $500 million \n",
+      "and was selling for $100 million she was beyond  \n",
+      "lucky and thank God our stock got so cheap that \n",
+      "it attracted Warren's attention in 1973 Don Graham  \n",
+      "is Katharine's son and a former publisher of the \n",
+      "post Don Graham says that Warren Buffett is the  \n",
+      "greatest thing in business that ever happened to \n",
+      "Katharine Graham she needed somebody to reassure  \n",
+      "her what were the things you would say to her to \n",
+      "boost her confidence the biggest thing I said is  \n",
+      "I said when you look in the mirror you know you \n",
+      "it's a fun house mirror because you're seeing it  \n",
+      "Through The Eyes of what the males are telling \n",
+      "you about it so my job is to turn that fun house  \n",
+      "mirror into a regular mirror and she knew I was \n",
+      "on her side and I admired her enormously and and  \n",
+      "she was torturing herself she couldn't help doing \n",
+      "that Nixon hated the post us personally for was  \n",
+      "dying day the documentary For the First Time Shows \n",
+      "the public the full extent of President Richard  \n",
+      "Nixon's Feud with Katharine graham I saw her on \n",
+      "the TV last night Mrs Graham I would have thought  \n",
+      "she's about 85 years old she's only about I think \n",
+      "uh something like 57 oh no I know that she's aged  \n",
+      "terribly she's a terrible old bag oh she's an old \n",
+      "[ __ ] in my right did she talk about facing that  \n",
+      "kind of sexism and those kind of taunts from even \n",
+      "the president the United States well Nixon didn't  \n",
+      "scare her at all what did scare her was the \n",
+      "idea of losing the paper The Washington Post  \n",
+      "Its presses crippled in a violent strike by never \n",
+      "did that feel more real to Graham than in 1975  \n",
+      "when the post's printers damaged the presses and \n",
+      "went on a bitter strike for more than four months  \n",
+      "limiting the paper circulation how challenging \n",
+      "was that well that that tore her apart she was  \n",
+      "suffering in that way and and at that time more \n",
+      "than she ever suffered during Watergate or during  \n",
+      "during the Pentagon papers or anything but she \n",
+      "thought she might be blowing everything Buffett  \n",
+      "told us Katharine Graham prevailed because she was \n",
+      "Brave and it's because of her that the Washington  \n",
+      "Post company stock price went up more than 3,000% \n",
+      "while she was publisher but she didn't just make  \n",
+      "Buffett a lot of money she said my effect on \n",
+      "Warren has mostly been limited to his lifestyle  \n",
+      "I introduced him to the possibility that a steady \n",
+      "diet of fast food and Cherry Cokes might not be  \n",
+      "the best for him yeah but she didn't convert \n",
+      "me so your favorite foods are whatever I was  \n",
+      "eating when I was six which was it was hot dogs \n",
+      "and hamburgers and and Coke and ice cream sundaes  \n",
+      "root beer floats are my favorite i i i frequently \n",
+      "have a dinner of root beer floats and so you're at  \n",
+      "Katharine Graham's house at this fancy you know \n",
+      "her very fancy she's got a chef for the French  \n",
+      "chef and you get served a lobster and what did you \n",
+      "do with the lobster well I unfortunately attacked  \n",
+      "it from the wrong side and and finally and of \n",
+      "course she was very reluctant to criticize me  \n",
+      "finally at some point she said you know it might \n",
+      "be helpful or something what did I know about  \n",
+      "lobsters Graham died in 2001 and Buffett served \n",
+      "as an usher at her funeral that's a good picture  \n",
+      "as for the Oracle of Omaha the legendary investor \n",
+      "is now 94 years old still chairman of berkshire  \n",
+      "Hathaway and still making Front Page News every \n",
+      "word he utters has the power to Roy the financial  \n",
+      "markets can I just ask you a couple of questions \n",
+      "about kind of how you see the state of the economy  \n",
+      "right now well I think that's the most interesting \n",
+      "subject in the world but I won't talk I can't  \n",
+      "talk about it now I really can't how do you think \n",
+      "tariffs will affect the economy I mean tariffs are  \n",
+      "actually we've had a lot of experience with them \n",
+      "they're they're an of War to some degree how do  \n",
+      "you think tariffs will impact inflation over time \n",
+      "there are attacks on on Goods I mean you know the  \n",
+      "Tooth Fairy doesn't pay them I mean and see you \n",
+      "always have to just and then what you always ask  \n",
+      "to ask that question in economics always say and \n",
+      "then what so is there an answer for that when when  \n",
+      "people say you know inflation persists consumer \n",
+      "prices keep going up when's the end in sight  \n",
+      "no prices will be higher 10 years from now in 20 \n",
+      "years from now and 30 years from now and what do  \n",
+      "you think about what's happening in Washington \n",
+      "right now about efforts think it's Washington  \n",
+      "yeah it's you know technology changes things all \n",
+      "kinds of things but Washington is Washington and  \n",
+      "the problem with politics is that it you tend to \n",
+      "have to make tiny compromises as you go along and  \n",
+      "what do you think about Elon musk's efforts \n",
+      "to cut well I better not get into all do you  \n",
+      "talk to him at all I talked to El a few times \n",
+      "and any thoughts about his current efforts in\n",
+      "Washington no you've always been bullish \n",
+      "on American companies majority of of any  \n",
+      "money I manage will always been in the \n",
+      "United States why is that it's the best\n",
+      "place I was lucky to be born here\n"
+     ]
+    }
+   ],
+   "source": [
+    "video_id = '0z_Ujm3lmcU'\n",
+    "try:\n",
+    "  res = get_youtube_transcript(video_id, lang_code='en', format='text')\n",
+    "  print(res)\n",
+    "except Exception as e:\n",
+    "  print(e)"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,7 +242,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
